2013-03-03  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: removal: Support for BZ2 (bzlib) and LZO (lzo1x)
        compression has been removed.

        * mmg: bug fix: Using drag & drop to add playlists will no longer
        lock the dragging application (e.g. Windows Explorer) in D&D mode
        for the duration of the scan for other playlists.

        * mmg: bug fix: The validation for the argument to "split by
        chapters" was wrongfully rejecting certain valid inputs (chapter
        number lists in which the second or any later chapter number was
        higher than 9).

        * all: enhancement on Windows: all programs now determine the
        interface language to use from the user's selected interface
        language (C function "GetUserDefaultUILanguage()"), not from the
        locale setting. Implements #852.

2013-03-02  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.1.0.

2013-02-24  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Fixed mkvmerge sometimes mistakenly detecting
        MPEG-1 video in MPEG program streams as AVC/h.264. Fixes #845.

        * mmg: new feature: When a playlist file (e.g. MPLS Blu-ray
        playlist) is added mmg can optionally scan all the other files in
        the directory that have the same extension and present the user
        with the results (including them playback time, total size, number
        of chapters, number and types of tracks). The user can then select
        the actual playlist file to add. The user can configure the
        minimum playlist duration in order to filter out too short ones.

2013-02-22  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: new feature: Added an option for disabling making the
        suggested output file name unique by adding a running number
        (e.g. ' (1)'). Implements #848.

        * mmg: new feature: The output file name can be auto-set to be